2002-10-29  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scangobj.in: in get_type_name() set is_pointer to TRUE for
	subtypes of G_TYPE_BOXED and G_TYPE_POINTER. This means we get things
	like "GtkTreeIter *iter" rather than "GtkTreeIter iter" which was
	incorrect. Also return 'GParamSpec*' for G_TYPE_PARAM.
	in lookup_signal_arg_names() changed GtkNotebook::switch-page
	page argument to guint. And fixed a few other entries.
	Also fixed argument numbering, so we don't get 2 "widget" arguments.
	
	* gtkdoc-scanobj.in: add ';' after unlink command to avoid warning.

2002-10-20  Matthias Clasen  <maclas@gmx.de>

	* examples/Makefile.am (SCANOBJ_FILES): Add $(DOC_MODULE).prerequisites.

	* gtkdoc-mkdb.in: Read $MODULE.prerequisites and put list of 
	prerequisites below the object hierarchy for interfaces.

	* gtkdoc-scangobj.in: Write information about interface
	prerequisites to $MODULE.prerequisites.

2002-10-15  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Sort paramspec arrays for
	greater stability and less random tmpl file diffs.

2002-10-14  Matthias Clasen  <maclas@gmx.de>

	* examples/Makefile.am (SCANOBJ_FILES): Add $(DOC_MODULE).interfaces.

	* gtkdoc-mkdb.in: Read $MODULE.interfaces and put lists of 
	implemented interfaces/known implementations below the object 
	hierarchy for classes/interfaces.

	* gtkdoc-scangobj.in: Write interface information to 
	$MODULE.interfaces.

2002-10-12  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Make interface appear in the object hierarchy.

2002-10-11  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: use 'UTF-8', not UTF-8 for default.encoding, to
	make the encoding actually appear in the resulting HTML.

2002-10-09  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkdb.in: set $doctype_header to "" for the SGML case, as
	we don't add a doctype to the beginning of SGML fragments.

Tue Sep 17 01:07:51 2002  Jonathan Blandford  <jrb@gnome.org>
